[package]
name = "runlogger"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI Framework
ratatui = "0.30"
crossterm = "0.29"

# Database
rusqlite = { version = "0.40", features = ["bundled"] }

# Date/Time
chrono = "0.4"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Utility
dirs = "6.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
